--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,11 @@
 		"vscode": {
 			"settings": {},
 			"extensions": [
-				"streetsidesoftware.code-spell-checker"
+				"streetsidesoftware.code-spell-checker",
+				"ms-azuretools.vscode-docker",
+				"GitHub.copilot-chat",
+				"GitHub.copilot-nightly",
+				"ms-vscode.sublime-keybindings"
 			]
 		}
 	},
